# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.39 $ $Date: 2008-02-19 14:50:39 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-02-15  Christian Heller  <christian.heller@tuxtax.de>
        * Fixed or temporarily commented out bugs in source code to make cyboi compilable again

2008-02-14  Christian Heller  <christian.heller@tuxtax.de>
        * Continue functions "receive_gnu_linux_console.c" and "gnu_linux_console_communicator.c"

2008-01-26  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt modules "checker.c", "receive_gnu_linux_console.c",
            "read_gnu_linux_console.c", "decode_gnu_linux_console.c"

2007-12-28  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt and optimise new functions in "applicator/sense"

2007-12-08  Christian Heller  <christian.heller@tuxtax.de>
        * Move suitable functions away from "sense_gnu_linux_console.c" into "gnu_linux_console_communicator.c"
            and add "ungetc" function right after "fgetc", to unread a detected character in the input stream,
            in order to make it available again to "read_gnu_linux_console"
        * Move suitable functions away from "sense_x_window_system.c" into "x_window_system_communicator.c"
            and only leave one function "XEventsQueued" to get notified of a key/ mouse event

2007-12-01  Christian Heller  <christian.heller@tuxtax.de>
        * Move suitable functions away from "sense_socket.c" into special communicator files, e.g.:
            "memoriser/communicator/datagram_socket_communicator.c"